
* rev ####

* Ensure we don't leave xymond_hostdata or xymond_history zombies lying around
  after dropping host records (Reported by Scot Kreienkamp)
* Fix up HTML list layout to reflect current standards (Thanks, hallik@calyc3.com)
* Fix documentation incorrectly describing multigraph syntax as (e.g.) GRAPH_cpu.
  Should be GRAPHS_cpu (Thanks, Galen Johnson)
* Move ntpdate config to env variable (Thanks, Axel Beckert, pointed out by Matt Vander Werf)
* Supports scientific notation for NCV data (Thanks, Axel Beckert)
* Increase resolution of xymonnet poll timing results (Thanks, Christoph Berg)
* New clock skew RRD files will allow for negative delta values (Thanks, Axel Beckert)
* Fix lots of typos! (Debian)
* Don't skip over "mailq.rrd" (Roland Rosenfeld)
* The signature algorithm used on an SSL-enabled TCP test run by xymonnet is now shown
  on the sslcert page. (Thanks, Ralph Mitchell)
* The cipher list displayed in 'sslcert' tests will now be limited to the cipher that was 
  actually used on the SSL connection. The --showallciphers option to xymonnet will
  restore the previous behavior. (From idea from Ralph Mitchell)


Changes from 4.3.20 -> 4.3.21 (22 May 2015)
===========================================

* rev 7668

* RSS feeds should now display the short description of the event again.


Changes from 4.3.19 -> 4.3.20 (15 May 2015)
===========================================

* rev 7661

* Summaries should be properly displayed again, and will display on the
  nongreen.html page as well.
* An icon for green acknowledged states is now included -- ironically, the 
  original icon that the other checkmarks were based off of.
* The various utilities in cgi-bin and cgi-secure are now hardlinked to 
  cgiwrap at install time instead of softlink, to allow for FollowSymLinks-less
  apache configurations
* The protocol section of URLs in hosts.cfg is now case-insensitive, and ftps
  URLs (FTP-over-SSL, not sftp) are recognized as a protocol.