@@ -99,8 +99,13 @@ const static struct {
 	{ "IPTEST_2_CLEAR_ON_FAILED_CONN", "TRUE" },
 	{ "NONETPAGE", "" },
 	{ "FPING", "xymonping" },
+	{ "FPINGOPTS", "-Ae" },
+	{ "SNTP", "sntp" },
+	{ "SNTPOPTS", "-u" },
 	{ "NTPDATE", "ntpdate" },
+	{ "NTPDATEOPTS", "-u -q -p 1" },
 	{ "TRACEROUTE", "traceroute" },
+	{ "TRACEROUTEOPTS", "-n -q 2 -w 2 -m 15" },
 	{ "RPCINFO", "rpcinfo" },
 	{ "XYMONROUTERTEXT", "router" },
 	{ "NETFAILTEXT", "not OK" },
